--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-/.dragon
-/lib/HueSDK_iOS.framework
+./.dragon
+./lib/HueSDK_iOS.framework
 .DS_Store
 bin/lib/Logos/Generator/Base/Generator.pm
+bin/tbdump
+DragonGen/__pycache__
