--- a/DragonGen/defaults.yml
+++ b/DragonGen/defaults.yml
@@ -3,7 +3,7 @@
 # Configurations here should provide enough default variables to create the specified module;
 # Please reach out to _kritanta if you need advice on extending these
 Defaults:
-  proj_build_dir: .dragon/
+  proj_build_dir: .dragon
   builddir: $proj_build_dir/build
   objdir: $proj_build_dir/obj
   signdir: $proj_build_dir/sign
@@ -12,6 +12,7 @@ Defaults:
   cc: clang
   cxx: clang++
   ld: clang++
+  nopack: No
   codesign: ldid
   dsym: dsymutil
   plutil: plutil
@@ -21,6 +22,7 @@ Defaults:
   optool: $dragondir/bin/optool
   stage:
     - 'true'
+  wild_recurse: No
   warnings: -Wall
   optim: "0"
   debug: -fcolor-diagnostics
@@ -108,8 +110,8 @@ Types:
     production_allow:
       - deb
     variables:
-      install_location: '/Library/PreferenceBundles/$name.bundle/'
-      build_target_file: '$proj_build_dir/$stagedir/$location/$name.bundle/$name'
+      install_location: '/Library/PreferenceBundles/$name.bundle'
+      build_target_file: '$proj_build_dir/$stagedir$location/$name'
       libs:
         - 'substrate'
       lopts: '-dynamiclib -ggdb -Xlinker -segalign -Xlinker 4000'
@@ -120,7 +122,7 @@ Types:
       stage2:
         - 'mkdir -p .dragon/_/Library/PreferenceLoader/Preferences/'
         - 'cp entry.plist .dragon/_/Library/PreferenceLoader/Preferences/$name.plist'
-        - 'cp -r Resources/* $proj_build_dir/$stagedir/$location/$name.bundle/'
+        - 'cp -R Resources/ $proj_build_dir/$stagedir/$location'
   bundle:
     required_states:
       - has_build_files
@@ -128,13 +130,13 @@ Types:
       - deb
     variables:
       install_location: '/Library/$name/$name.bundle/'
-      build_target_file: '$proj_build_dir/$stagedir/$location/$name.bundle/$name'
+      build_target_file: '$proj_build_dir/$stagedir/$location/$name'
       lopts: '-dynamiclib -ggdb -Xlinker -segalign -Xlinker 4000'
       frameworks:
         - UIKit
         - Foundation
       stage2:
-        - 'cp -r Resources/* $proj_build_dir/$stagedir/$location/$name.bundle/'
+        - 'cp -R Resources/* $proj_build_dir/$stagedir/$location/$name.bundle/'
   resource-bundle:
     required_states:
     production_allow:
@@ -174,6 +176,8 @@ Types:
       - raw
     variables:
       install_location: '/usr/bin'
-      target: '$proj_build_dir/$stagedir/$location/$name'
+      build_target_file: '$proj_build_dir/$stagedir/$location/$name'
+      stage2:
+        - 'true;'
 
   raw:
