Update logos script location

--- a/DragonGen/defaults.yml
+++ b/DragonGen/defaults.yml
@@ -18,7 +18,7 @@ Defaults:
   plutil: plutil
   swift: swift
   lipo: lipo
-  logos: $dragondir/bin/logos.pl
+  logos: $dragondir/modules/logos/bin/logos.pl
   optool: $dragondir/bin/optool
   stage:
     - 'true'
