--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "DragonGen/buildgen"]
 	path = DragonGen/buildgen
 	url = https://github.com/DragonBuild/buildgen.git
+[submodule "modules/logos"]
+	path = modules/logos
+	url = https://github.com/theos/logos.git
