--- a/DragonGen/defaults.yml
+++ b/DragonGen/defaults.yml
@@ -40,10 +40,23 @@ Defaults:
   lib_dirs:
     - $dragondir/lib
     - '.'
+  additional_lib_dirs:
+  additional_fw_dirs:
   cinclude: '-I$dragondir/include -I$dragondir/vendor/include -I$dragondir/include/_fallback -I$DRAGONBUILD/headers/ -I$pwd'
   stagedir: '_'
   modulesinternal: '-fmodules -fcxx-modules -fmodule-name=$name -fbuild-session-file=$proj_build_dir/modules/ -fmodules-validate-once-per-build-session -fmodules-prune-after=345600 -fmodules-prune-interval=86400'
 
+# Touching these without a firm grasp of what you're doing is likely to break things
+# They serve to abstract how we slap together all of the clang args
+InternalDefaults:
+  internalcflags: '$cinclude $debug $fwSearch $cflags $btarg -O$optim  $targetprefix$targetvers $sysroot $header_includes $arc $triple $theosshim $macros $warnings $modulesinternal'
+  internalswiftflags: '-color-diagnostics -enable-objc-interop -sdk /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS.sdk -L/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib/swift/iphoneos -g -L/usr/lib/swift -swift-version 5 -module-name $name'
+  internalfflags: '$internalcflags $typeldflags $frameworks $libs $libflags $lopts $libSearch $ldflags $libs'
+  internalldflags: '$internalcflags $typeldflags $frameworks $libs $libflags $lopts $libSearch $ldflags $libs'
+  internalsigntarget: '$signdir/$build_target_file.unsigned'
+  internalsymtarget: '$signdir/$build_target_file.unsym'
+  internallibflags: '-lobjc -lc++'
+  pwd: '.'
 Targets:
   sim:
     all:
@@ -113,8 +126,7 @@ Types:
       build_target_file: '$proj_build_dir/$stagedir/$location$name.dylib'
       hooker-priority: libhooker
       lang: logos
-      lopts: '-dynamiclib -ggdb -Xlinker -segalign -Xlinker 4000'
-      internalldflags: -framework CydiaSubstrate
+      lopts: '-dynamiclib -ggdb -Xlinker -segalign -Xlinker 4000 -framework CydiaSubstrate'
       frameworks:
         - UIKit
         - Foundation
@@ -130,8 +142,7 @@ Types:
       build_target_file: '$proj_build_dir/$stagedir$location/$name'
       libs:
         - 'substrate'
-      lopts: '-dynamiclib -ggdb -Xlinker -segalign -Xlinker 4000'
-      internalldflags: -framework Preferences
+      lopts: '-dynamiclib -ggdb -Xlinker -segalign -Xlinker 4000 -framework Preferences'
       frameworks:
         - UIKit
         - Foundation
