Migrate to submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -17,3 +17,6 @@
 [submodule "include"]
 	path = include
 	url = https://github.com/DragonBuild/include
+[submodule "DragonGen"]
+	path = DragonGen
+	url = https://github.com/DragonBuild/DragonGen
