Migrate to submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -20,3 +20,6 @@
 [submodule "DragonGen"]
 	path = DragonGen
 	url = https://github.com/DragonBuild/DragonGen
+[submodule "vendor"]
+	path = vendor
+	url = https://github.com/DragonBuild/vendor
