--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ secrets.PYTHON_VERSION }}
+        python-version: 3.9.5
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
