--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
+        pip install pyyaml
         pip install git+git://github.com/dragonbuild/dragon@dev
         brew install ldid
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
