--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,6 +38,7 @@ jobs:
         pip install pyyaml
         pip install git+git://github.com/dragonbuild/dragon@dev
         brew install ldid
+        brew install ninja
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Install DragonBuild
       run: |
