Add missing dependency

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,6 +39,7 @@ jobs:
         pip install git+git://github.com/dragonbuild/dragon@dev
         brew install ldid
         brew install ninja
+        brew install dpkg
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Install DragonBuild
       run: |
