--- a/src/dragontools/deployable/defaults.yml
+++ b/src/dragontools/deployable/defaults.yml
@@ -63,6 +63,9 @@ Targets:
       targetos: iphonesimulator
       triple: MACHINE
       arc: yes
+      fw_dirs:                                                         
+        - /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator.sdk                                                                                  
+        - $dragondir/frameworks 
       sysroot: /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator.sdk
       archs:
         - MACHINE
