--- a/src/dragon/config/types.yml
+++ b/src/dragon/config/types.yml
@@ -1,98 +1,3 @@
----
-# Special thanks to uroboro for suggesting this
-# Configurations here should provide enough default variables to create the specified module;
-# Please reach out to _kritanta if you need advice on extending these
-Defaults:
-  proj_build_dir: .dragon
-  builddir: $proj_build_dir/build
-  objdir: $proj_build_dir/obj
-  signdir: $proj_build_dir/sign
-  bridging-header: $name-Bridging-Header.h
-  dragondir: $$DRAGONDIR
-  toolchain-prefix: arm64-apple-darwin14-
-  tool-prefix: ''
-  cc: clang
-  cxx: clang++
-  ld: clang++
-  nopack: No
-  codesign: ldid
-  dsym: dsymutil
-  plutil: plutil
-  swift: swift
-  lipo: lipo
-  logos: $dragondir/src/logos/bin/logos.pl
-  cargo: cargo
-  cargo-nightly: 'cargo +nightly'
-  optool: $dragondir/bin/optool
-  stage:
-    - 'true'
-  wild_recurse: No
-  warnings: -Wall
-  optim: "0"
-  debug: -fcolor-diagnostics
-  idflag: ''
-  entflag: '-S'
-  entfile: ''
-  resource_dir: 'Resources'
-  fw_dirs:
-    - $dragondir/sdks/iPhoneOS.sdk/System/Library/PrivateFrameworks/
-    - $dragondir/frameworks
-  lib_dirs:
-    - $dragondir/lib
-    - '.'
-  additional_lib_dirs:
-  additional_fw_dirs:
-  cinclude: '-I$dragondir/include -I$dragondir/vendor/include -I$dragondir/include/_fallback -I$DRAGONDIR/headers/ -I$pwd'
-  stagedir: '_'
-  modulesinternal: '-fmodules -fcxx-modules -fmodule-name=$name -fbuild-session-file=$proj_build_dir/modules/ -fmodules-validate-once-per-build-session -fmodules-prune-after=345600 -fmodules-prune-interval=86400'
-
-# Touching these without a firm grasp of what you're doing is likely to break things
-# They serve to abstract how we slap together all of the clang args
-InternalDefaults:
-  internalcflags: '$cinclude $debug $fwSearch $cflags $btarg -O$optim  $targetprefix$targetvers $sysroot $header_includes $arc $triple $theosshim $macros $warnings $modulesinternal'
-  internalswiftflags: '-color-diagnostics -enable-objc-interop -sdk /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS.sdk -L/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib/swift/iphoneos -g -L/usr/lib/swift -swift-version 5 -module-name $name'
-  internalfflags: '$internalcflags $typeldflags $frameworks $libs $libflags $lopts $libSearch $ldflags $libs'
-  internalldflags: '$internalcflags $typeldflags $frameworks $libs $libflags $lopts $libSearch $ldflags $libs'
-  internalsigntarget: '$signdir/$build_target_file.unsigned'
-  internalsymtarget: '$signdir/$build_target_file.unsym'
-  internallibflags: '-lobjc -lc++'
-  pwd: '.'
-Targets:
-  sim:
-    all:
-      targetos: iphonesimulator
-      triple: MACHINE
-      arc: yes
-      fw_dirs:                                                         
-        - /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator.sdk                                                                                  
-        - $dragondir/frameworks 
-      sysroot: /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator.sdk
-      archs:
-        - MACHINE
-  ios:
-    all:
-      targetos: iphoneos
-      targetvers: 10.0
-      triple: arm64-apple-ios$targetvers
-      targetprefix: -miphoneos-version-min=
-      arc: yes
-      sysroot: $dragondir/sdks/iPhoneOS.sdk
-      archs:
-        - armv7
-        - arm64
-        - arm64e
-  watchos:
-    all:
-      targetos: watchos
-      targetvers: 5.0
-      arc: yes
-      sysroot: $dragondir/sdks/WatchOS.sdk
-      archs: arm64_32
-  host:
-    all:
-      triple: MACHINE
-      archs:
-        - MACHINE
 Types:
   comprehensive:
   app:
@@ -135,7 +40,7 @@ Types:
         - UIKit
         - Foundation
       stage2:
-        - 'cp $name.plist $proj_build_dir/_/Library/MobileSubstrate/DynamicLibraries/$name.plist 2>/dev/null  || python3 -m dragontools.bfilter $proj_build_dir/DragonMake $name > $proj_build_dir/_/Library/MobileSubstrate/DynamicLibraries/$name.plist'
+        - 'cp $name.plist $proj_build_dir/_/Library/MobileSubstrate/DynamicLibraries/$name.plist 2>/dev/null  || python3 -m dragongen.bfilter $proj_build_dir/DragonMake $name > $proj_build_dir/_/Library/MobileSubstrate/DynamicLibraries/$name.plist'
   prefs:
     required_states:
       - has_build_files
