--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -43,7 +43,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pyyaml
-        pip install git+git://github.com/dragonbuild/dragon@dev
+        pip install git+git://github.com/dragonbuild/dragon
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Install DragonBuild
       run: |
