--- a/src/dragon/config/types.yml
+++ b/src/dragon/config/types.yml
@@ -136,6 +136,17 @@ Types:
       build_target_file: '$proj_build_dir/$stagedir/$location/$name'
       stage2:
         - 'true;'
+  binary:
+    required_states:
+      - has_build_files
+    production_allow:
+      - deb
+      - raw
+    variables:
+      install_location: '/usr/bin'
+      build_target_file: '$proj_build_dir/$stagedir/$location/$name'
+      stage2:
+        - 'true;'
   tool:
     required_states:
       - has_build_files
