--- a/src/dragon/config/defaults.yml
+++ b/src/dragon/config/defaults.yml
@@ -42,6 +42,7 @@ Defaults:
     - '.'
   additional_lib_dirs:
   additional_fw_dirs:
+  prefix: []
   cinclude: '-I$dragondir/include -I$dragondir/vendor/include -I$dragondir/include/_fallback -I$DRAGONDIR/headers/ -I$pwd'
   stagedir: '_'
   modulesinternal: '-fmodules -fcxx-modules -fmodule-name=$name -fbuild-session-file=$proj_build_dir/modules/ -fmodules-validate-once-per-build-session -fmodules-prune-after=345600 -fmodules-prune-interval=86400'
@@ -49,7 +50,7 @@ Defaults:
 # Touching these without a firm grasp of what you're doing is likely to break things
 # They serve to abstract how we slap together all of the clang args
 InternalDefaults:
-  internalcflags: '$cinclude $debug $fwSearch $cflags $btarg -O$optim  $targetprefix$targetvers $sysroot $header_includes $arc $triple $theosshim $macros $warnings $modulesinternal'
+  internalcflags: '$cinclude $debug $fwSearch $cflags $btarg -O$optim  $targetprefix$targetvers $sysroot $header_includes $arc $triple $theosshim $macros $prefix $warnings $modulesinternal'
   internalswiftflags: '-color-diagnostics -enable-objc-interop -sdk /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS.sdk -L/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib/swift/iphoneos -g -L/usr/lib/swift -swift-version 5 -module-name $name'
   internalfflags: '$internalcflags $typeldflags $frameworks $libs $libflags $lopts $libSearch $ldflags $libs'
   internalldflags: '$internalcflags $typeldflags $frameworks $libs $libflags $lopts $libSearch $ldflags $libs'
